--- a/vignettes/driftR.Rmd
+++ b/vignettes/driftR.Rmd
@@ -95,7 +95,7 @@ There are six main functions in the `driftR` which each serve their own purpose 
 6. `dr_replace()` - replace observations with NA 1) for specific date ranges or 2) expressionally.
 
 ### Importing Data
-To import a data set, the `dr_read()` function is utilized. The argument `file` tells the function where the data is located.The argument `instrument` tells the function what instrument collected the data for formatting purposes. Accepted instruments are currently YSI Multiparameter V2 Sonde (`instrument = "Sonde"`), YSI EXO2 (`instrument = "EXO"`), and Onset U24 Conductivity Logger (`instrument = "HOBO"`). The argument `defineVar` is a logical statement where if `FALSE`, the data will be imported with no modifications, and if `TRUE`, the "units" observation will be removed and the data will be stored as numeric variables. The argument `cleanVar` is a logical statement that, if `TRUE`, will remove all special characters, numbers, and spaces from variable names in order to increase the ease of working with the data in R. For example, for the YSI Sonde 6600, turbidity is exported from the instrument as Turbidity+. This makes it hard to call the variable in R because the `+` is seen as an operation. The argument `case` is a string that tells `dr_read` how you want the clean variable names formatted. The default is "snake", but there are lots of options to choose from. The options and their respective outputs can be found in the `clean_names` function of the [`janitor`](https://cran.r-project.org/web/packages/janitor/janitor.pdf) package. 
+To import a data set, the `dr_read()` function is utilized. The argument `file` tells the function where the data is located.The argument `instrument` tells the function what instrument collected the data for formatting purposes. Accepted instruments are currently YSI Multiparameter V2 Sonde (`instrument = "Sonde"`), YSI EXO2 (`instrument = "EXO"`), and Onset U24 Conductivity Logger (`instrument = "HOBO"`). The argument `defineVar` is a logical statement where if `FALSE`, the data will be imported with no modifications, and if `TRUE`, the "units" observation will be removed and the data will be stored as numeric variables. The argument `cleanVar` is a logical statement that, if `TRUE`, will remove all special characters, numbers, and spaces from variable names in order to increase the ease of working with the data in R. For example, for the YSI Sonde 6600, turbidity is exported from the instrument as Turbidity+. This makes it hard to call the variable in R because the `+` is seen as an operation. The argument `case` is a string that tells `dr_read` how you want the clean variable names formatted. The default is "snake", but there are lots of options to choose from. The options and their respective outputs can be found in the `clean_names` function of the [`janitor`](https://CRAN.R-project.org/package=janitor) package. 
 
 ```{r, eval=FALSE}
 waterTibble <- dr_read(file = "sondeData.csv", instrument = "Sonde", 
